# self_study

./: .gitignore  build.ps1
.github/workflows/: marp-pages.yml
pynotebook/: notebook.ipynb  pyproject.toml
slides/: Slides.md  Slides_1.md  Slides_2.md  Slides_3.md  Slides_4.md
